--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -414,10 +414,10 @@
         "    return adeps, cdeps, aloops, cloops\n",
         "\n",
         "  for verb in verbs: # any 'VERB' or \"AUX\" or \"NOUN\", because those are typicaly at root\n",
-        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep nsubj conj ccomp','cc advcl',astart, aned, cstart, cend)\n",
+        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep','advcl',astart, aned, cstart, cend)\n",
         "    adeps.update(deps)\n",
         "    aloops.update(loops)\n",
-        "    deps, loops = explore(verb, consequent, antecedent, sentence, 'dep prep advmod conj advcl','cop xcomp',cstart,cend,astart,aend)\n",
+        "    deps, loops = explore(verb, consequent, antecedent, sentence, 'advcl','',cstart,cend,astart,aend)\n",
         "    cdeps.update(deps)\n",
         "    cloops.update(loops)\n",
         "    if len(adeps) > 0 or len(cdeps) > 0:\n",
@@ -466,9 +466,8 @@
         "  if len(apred)==0:\n",
         "    return id, 0, atext, astart, aend, 0\n",
         "\n",
-        "  print(first,'_',ctext)\n",
+        "  #print(first,'_',ctext)\n",
         "  # check based on rules\n",
-        "  #print(id,len(arule.index))\n",
         " \n",
         "  alab ='0' # assume antecedent false\n",
         "  count= 0  # counter of predictions\n",
@@ -487,12 +486,12 @@
         "      atext = arule['text'][a]\n",
         "      text = atext\n",
         "      \n",
-        "      print('|', alab, atext)\n",
+        "      #print('|', alab, atext)\n",
         "      if first:\n",
         "        adeps,cdeps,aloops,cloops = track(verbs, atext, ctext, sentence, astart, aend, cstart, cend)\n",
         "      else: \n",
         "        adeps,cdeps,aloops,cloops = track(verbs, ctext, atext, sentence, cstart, cend, astart, aend)\n",
-        "      print(first,adeps,cdeps,aloops,cloops) # eg. 'set() set() set() set()'\n",
+        "      #print(first,adeps,cdeps,aloops,cloops) # eg. 'set() set() set() set()'\n",
         "\n",
         "      if ralab == 1:      \n",
         "        if not first or (len(adeps) > 0 and len(cdeps) > 0):\n",
@@ -503,15 +502,15 @@
         "            else:\n",
         "              atext = ctext + ' ' + atext\n",
         "              astart = aend-1 - len(ctext)\n",
-        "            print('+' , atext)   \n",
+        "            #print('+' , atext)   \n",
         "            return amid, alab, atext, astart, aend,'-50' # continue to next step\n",
         "\n",
-        "        print('V')\n",
+        "        #print('V')\n",
         "        return amid, alab, atext, astart, aend, 100 # no other options available\n",
         "      else:\n",
         "        if len(adeps) >0 and len(cdeps) >0 and len(aloops) >0 and len(cloops) >0:\n",
         "          if len(apred.index) > count:\n",
-        "            print('x')\n",
+        "            #print('x')\n",
         "            continue    \n",
         "          return amid, alab, atext, astart, aend, '-100' # give up and fail\n",
         "\n",
@@ -524,16 +523,16 @@
         "              else:\n",
         "                atext = ctext + ' ' + atext\n",
         "                astart = aend-1 - len(ctext) \n",
-        "              print('+' , atext)   \n",
+        "              #print('+' , atext)   \n",
         "              return amid, alab, atext, astart, aend,'-50' # continue to next step\n",
         "\n",
-        "          print('v')\n",
+        "          #print('v')\n",
         "          return amid, alab, atext, astart, aend, 75\n",
         "        else:\n",
         "          \n",
         "          if len(aloops) > 0 or len(cloops) > 0:\n",
         "            if first:\n",
-        "                print('^',count)\n",
+        "                #print('^',count)\n",
         "                return amid, alab, atext, astart, aend,'-25'\n",
         "            else:\n",
         "                if len(cloops)>0:\n",
@@ -542,12 +541,12 @@
         "                else:\n",
         "                  atext = ctext + ' ' + atext\n",
         "                  astart = aend-1 - len(ctext)\n",
-        "                print('+' , atext)   \n",
+        "                #print('+' , atext)   \n",
         "                return amid, alab, atext, astart, aend,'-50' \n",
         "\n",
-        "          print('v')              \n",
+        "          #print('v')              \n",
         "          return amid, alab, atext, astart, aend, 50 # uncertain     \n",
-        "  print('v')\n",
+        "  #print('v')\n",
         "  return amid, alab, atext, astart, aend, 25 # unpredicted"
       ],
       "execution_count": null,
@@ -608,7 +607,7 @@
         "  rebuilt, spans, deps, verbs = extract_dependents(prediction)\n",
         "  verbs = follow_children(verbs) # flatten the   \n",
         "  sentence = normalize(rebuilt)\n",
-        "  print(id, sentence)\n",
+        "  #print(id, sentence)\n",
         "  \n",
         "  astart=-1\n",
         "  aend = -1\n",
@@ -620,7 +619,7 @@
         "\n",
         "  cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext)\n",
         "  aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, cstart, cend)\n",
-        "  print(aprob,'A')\n",
+        "  #print(aprob,'A')\n",
         "\n",
         "  if aprob != '-100' and aprob != '-50' and aprob!='-25':\n",
         "    cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext,astart,aend)\n",
@@ -629,17 +628,15 @@
         "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, cstart, cend, False)\n",
         "  if aprob == '-25':\n",
         "    cid, clab, ctext, cstart, cend, cprob = analyze(id, c_df, rc_df, sentence, verbs, atext, astart, aend, False)\n",
-        "  print(cprob,'C')  \n",
+        "  #print(cprob,'C')  \n",
         "\n",
         "  if cprob != 100 and cprob != 75 and cprob != 50 and cprob != 25:\n",
         "    aid, alab, atext, astart, aend, aprob = analyze(id, a_df, ra_df, sentence, verbs, ctext, cstart, cend)\n",
-        "  print(aprob,'A')  \n",
+        "  #print(aprob,'A')  \n",
         "\n",
         "  consequent = ctext\n",
         "  antecedent = atext\n",
-        "  #print(antecedent)\n",
-        "  #print(consequent)\n",
-        "\n",
+        " \n",
         "  cdep = '' # Pass\n",
         "  if consequent == antecedent:\n",
         "    consequent = ''\n",
@@ -671,7 +668,7 @@
         "  else:\n",
         "    cdep = '!'      \n",
         "\n",
-        "  print(cdep) # post-correction\n",
+        "  #print(cdep) # post-correction\n",
         "  if len(cdep) > 0:\n",
         "    count=count+1\n",
         "\n",
@@ -703,12 +700,12 @@
         "  submit_df = submit_df.append(result_row, ignore_index=True)\n",
         "  report_df = report_df.append(report_row, ignore_index=True)\n",
         "\n",
-        "  print(id, text, astart, aend, cstart, cend)\n",
+        "  #print(id, text, astart, aend, cstart, cend)\n",
         "  sleep(1)\n",
         "\n",
         "submit_df.to_csv(prefix+'subtask2.csv',index=False, header=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid']) \n",
         "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','cdep','consequent','gold_consequent','cstart','cend','gold_antecedent','antecedent','alabel','aprob','astart','aend'])\n",
-        "print('Adjusted =',count)"
+        "#print('Adjusted =',count)"
       ],
       "execution_count": null,
       "outputs": []
