--- a/SemEval2020_Task5_Data.ipynb
+++ b/SemEval2020_Task5_Data.ipynb
@@ -414,7 +414,7 @@
         "    return adeps, cdeps, aloops, cloops\n",
         "\n",
         "  for verb in verbs: # any 'VERB' or \"AUX\" or \"NOUN\", because those are typicaly at root\n",
-        "    deps, loops = explore(verb, antecedent, consequent, sentence, 'dep','advcl',astart, aned, cstart, cend)\n",
+        "    deps, loops = explore(verb, antecedent, consequent, sentence, '','advcl nsubj ccomp xcomp pcomp pobj dobj xobj',astart, aned, cstart, cend)\n",
         "    adeps.update(deps)\n",
         "    aloops.update(loops)\n",
         "    deps, loops = explore(verb, consequent, antecedent, sentence, 'advcl','',cstart,cend,astart,aend)\n",
@@ -594,7 +594,7 @@
         "from time import sleep\n",
         "\n",
         "submit_df = pd.DataFrame(columns=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid'])\n",
-        "report_df = pd.DataFrame(columns=['sentenceID','clabel','cprob','cdep','consequent','gold_consequent','cstart','cend','gold_antecedent','antecedent', 'alabel','aprob','astart','aend'])\n",
+        "report_df = pd.DataFrame(columns=['sentenceID','clabel','cprob','cdep','consequent','cstart','cend','antecedent','astart','aend','alabel','aprob'])\n",
         "\n",
         "count = 0\n",
         "for ind in tqdm(test_df.index): \n",
@@ -683,10 +683,10 @@
         "    'cend': cend,\n",
         "    #'gold_antecedent': test_df['antecedent'][ind],\n",
         "    'antecedent': antecedent, \n",
-        "    'alabel': alab,\n",
-        "    'aprob': aprob,\n",
         "    'astart': astart,\n",
-        "    'aend': aend\n",
+        "    'aend': aend,\n",
+        "    'alabel': alab,\n",
+        "    'aprob': aprob\n",
         "  }, name = str(id) )\n",
         "\n",
         "  result_row = pd.Series( data={\n",
@@ -704,8 +704,8 @@
         "  sleep(1)\n",
         "\n",
         "submit_df.to_csv(prefix+'subtask2.csv',index=False, header=['sentenceID','antecedent_startid','antecedent_endid','consequent_startid','consequent_endid']) \n",
-        "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','cdep','consequent','gold_consequent','cstart','cend','gold_antecedent','antecedent','alabel','aprob','astart','aend'])\n",
-        "#print('Adjusted =',count)"
+        "report_df.to_csv(prefix+'report.csv',index=False, header=['sentenceID','clabel','cprob','cdep','consequent','cstart','cend','antecedent','astart','aend','alabel','aprob'])\n",
+        "print('Adjusted =',count)"
       ],
       "execution_count": null,
       "outputs": []
