--- a/SemEval2020_Task5_Diff.ipynb
+++ b/SemEval2020_Task5_Diff.ipynb
@@ -55,38 +55,34 @@
         "df = pd.DataFrame({\n",
         "    'sentenceID': df[0],\n",
         "    'clabel': df[1],\n",
-        "    'cprob': df[2],\n",
-        "    'cdep' : df[3],\n",
-        "    'consequent': df[4], \n",
-        "    'gold_consequent': df[5],\n",
-        "    'cstart': df[6],\n",
-        "    'cend': df[7],\n",
-        "    'gold_antecedent': df[8],\n",
-        "    'antecedent': df[9], \n",
-        "    'astart': df[10],\n",
-        "    'aend': df[11],\n",
-        "    'alabel': df[12],\n",
-        "    'aprob': df[13]\n",
+        "    #'cprob': df[2],\n",
+        "    #'cdep' : df[3],\n",
+        "    #'consequent': df[4], \n",
+        "    'cstart': df[5],\n",
+        "    'cend': df[6],\n",
+        "    #'antecedent': df[7], \n",
+        "    'astart': df[8],\n",
+        "    'aend': df[9],\n",
+        "    'alabel': df[10],\n",
+        "    #'aprob': df[11]\n",
         "  }  \n",
         ")\n",
         "\n",
-        "df1 = pd.read_csv(prefix + 'report2.csv', header=None) \n",
+        "df1 = pd.read_csv(prefix + 'report1.csv', header=None) \n",
         "df1 = df1.drop(index=0)\n",
         "df1 = pd.DataFrame({\n",
         "    'sentenceID': df1[0],\n",
         "    'clabel': df1[1],\n",
-        "    'cprob': df1[2],\n",
-        "    'cdep' : df1[3],\n",
-        "    'consequent': df1[4], \n",
-        "    'gold_consequent': df1[5],\n",
-        "    'cstart': df1[6],\n",
-        "    'cend': df1[7],\n",
-        "    'gold_antecedent': df1[8],\n",
-        "    'antecedent': df1[9], \n",
-        "    'astart': df1[10],\n",
-        "    'aend': df1[11],\n",
-        "    'alabel': df1[12],\n",
-        "    'aprob': df1[13]\n",
+        "    #'cprob': df1[2],\n",
+        "    #'cdep' : df1[3],\n",
+        "    #'consequent': df1[4], \n",
+        "    'cstart': df1[5],\n",
+        "    'cend': df1[6],\n",
+        "    #'antecedent': df1[7], \n",
+        "    'astart': df1[8],\n",
+        "    'aend': df1[9],\n",
+        "    'alabel': df1[10],\n",
+        "    #'aprob': df1[11]\n",
         "  }  \n",
         ")"
       ],
