--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -89,7 +89,7 @@
       },
       "source": [
         "prediction = predictor.predict(\n",
-        "        sentence = \"TOP TWEETS -- @kurtbardella: if the first four weeks of the #Obama presidency were like this when I worked at #oversight we'd have issued so many subpoenas by now ...\"\n",
+        "        sentence = \"Donald Trump wants to turn his sour grapes at having lost the popular vote into an attack on voting rights, but really he wants to talk about how he could have won the popular vote if he'd tried.\"\n",
         ")\n",
         "#prediction"
       ],
@@ -602,15 +602,13 @@
         "  text = base[0]\n",
         "  start= base[1]\n",
         "  end = base[2]\n",
-        "  #print(start,text,end)\n",
         "\n",
         "  for r in removed:\n",
         "    #print(r[0],start,r[1],end)\n",
         "    if r[0] <= start:\n",
         "      start=start + 1\n",
-        "      end = end + 1\n",
         "      #print(start,text,end)\n",
-        "    elif r[0] <= end:\n",
+        "    if r[0] <= end +1:\n",
         "      end = end + 1\n",
         "      #print(start,text,end) \n",
         "    \n",
@@ -1020,7 +1018,7 @@
       },
       "source": [
         "modals, pasts, verbs, nouns, nounm, nounp = chunk(\n",
-        "  original = 'Mr. Rosenstein, whose office received briefings every other week on the progress of the investigation, would have glimpsed the gravity of the situation with the special counsel interviewing witnesses.'\n",
+        "  original = '\"If there was a better way to say it\\'s the highest, the best, the number one event we\\'ve ever had, I would,\" Mr. Thompson said in an interview the day before Friday\\'s rally.'\n",
         ")\n",
         "#print(verbs)\n",
         "#print(nounm)\n",
