--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -565,6 +565,8 @@
         "        end = start+len(prev)+len(r)\n",
         "        prev = text[start:end]\n",
         "        candid.append(overlay(start, {'labels':0, 'text':defrag, 'start':start, 'end':end}, original, removed))\n",
+        "      else:\n",
+        "        candid.append(overlay(start, {'labels':0, 'text':r, 'start':start, 'end':end}, original, removed))  \n",
         "    elif start <= end: # next fragment is located before prev end\n",
         "      defrag = r + prev\n",
         "      index = text.find(defrag) # is it exactly preceding prev fragment?\n",
@@ -578,7 +580,7 @@
         "        prev = r\n",
         "        if end < len(text):\n",
         "          candid.append(overlay(start, {'labels':0, 'text':r, 'start':start, 'end':end}, original, removed))\n",
-        "        \n",
+        "  \n",
         "  if len(candid) == 1:\n",
         "    candid[0].update(labels = 1) # gold  \n",
         "\n",
@@ -608,7 +610,7 @@
         "    if r[0] <= start:\n",
         "      start=start + 1\n",
         "      #print(start,text,end)\n",
-        "    if r[0] <= end +1:\n",
+        "    if r[0] <= end:\n",
         "      end = end + 1\n",
         "      #print(start,text,end) \n",
         "    \n",
@@ -704,11 +706,18 @@
       "source": [
         "def contract(text, base):\n",
         "  removed = []\n",
-        "  i=0\n",
-        "  for b in base: \n",
-        "    if text.find(b[1],b[0]-i)==-1:\n",
-        "      removed.append(b)\n",
-        "      i = i + 1\n",
+        "  open = False\n",
+        "  for i in range(len(base)-1):\n",
+        "    sequence = base[i][1]\n",
+        "    if i < len(base) - 1:\n",
+        "      sequence = sequence + base[i+1][1]\n",
+        "    if sequence==' \\\"' or sequence.startswith('\\\"'):\n",
+        "      open = True                 \n",
+        "    elif sequence=='\\\" ' or sequence.endswith('\\\"'):\n",
+        "      open = False    \n",
+        "    if text.find(sequence,base[i][0]-i)==-1:\n",
+        "      if open and sequence != ' \\\"':\n",
+        "        removed.append(base[i])\n",
         "  return removed"
       ],
       "execution_count": null,
@@ -1018,7 +1027,7 @@
       },
       "source": [
         "modals, pasts, verbs, nouns, nounm, nounp = chunk(\n",
-        "  original = '\"If there was a better way to say it\\'s the highest, the best, the number one event we\\'ve ever had, I would,\" Mr. Thompson said in an interview the day before Friday\\'s rally.'\n",
+        "  original = 'TOP TWEETS -- @kurtbardella: \"if the first four weeks of the #Obama presidency were like this when I worked at #oversight we\\'d have issued so many subpoenas by now\" ...'\n",
         ")\n",
         "#print(verbs)\n",
         "#print(nounm)\n",
