--- a/SemEval2020_Task5_Diff.ipynb
+++ b/SemEval2020_Task5_Diff.ipynb
@@ -57,10 +57,10 @@
         "    'clabel': df[1],\n",
         "    #'cprob': df[2],\n",
         "    #'cdep' : df[3],\n",
-        "    #'consequent': df[4], \n",
+        "    'consequent': df[4], \n",
         "    'cstart': df[5],\n",
         "    'cend': df[6],\n",
-        "    #'antecedent': df[7], \n",
+        "    'antecedent': df[7], \n",
         "    'astart': df[8],\n",
         "    'aend': df[9],\n",
         "    'alabel': df[10],\n",
@@ -75,10 +75,10 @@
         "    'clabel': df1[1],\n",
         "    #'cprob': df1[2],\n",
         "    #'cdep' : df1[3],\n",
-        "    #'consequent': df1[4], \n",
+        "    'consequent': df1[4], \n",
         "    'cstart': df1[5],\n",
         "    'cend': df1[6],\n",
-        "    #'antecedent': df1[7], \n",
+        "    'antecedent': df1[7], \n",
         "    'astart': df1[8],\n",
         "    'aend': df1[9],\n",
         "    'alabel': df1[10],\n",
